# agentic-research

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CHROMADB_MIGRATION_PLAN.md  CLAUDE.md  IMPLEMENTATION_HISTORY.md  LICENSE  MCP_DATAPREP_README.md  PR.md  README.md  README_FILE_SEARCH.md  ROBUSTIFICATION_DGX_SPARK_PLAN.md  ROBUSTIFICATION_DGX_SPARK_PLAN_v2.3_DRAFT.md  config.yaml  docker-compose.dev.yml  docker-compose.dgx.yml  docker-compose.local.yml  docker-compose.v1.dgx.models.yml  docker-compose.v1.dgx.yml  docker-compose.v1.local.yml  docker-compose.yml  inspect.sh  models.env  models.env.example  models.glm.env  models.mistralai.env  models.openai.env  models.qwen.env  pyproject.toml  urls.txt
agentic_research/: __init__.py
configs/: benchmark-default.yaml  config-chroma-mistral.yaml  config-chroma-openai.yaml  config-chroma.yaml  config-claude-4.0-sonnet.yaml  config-default.yaml  config-dgx.yaml  config-docker-dgx.yaml  config-docker-local.yaml  config-gpt-4.1-mini-o3-mini.yaml  config-gpt-4.1-mini.yaml  config-gpt-5-mini.yaml  config-mistral-medium.yaml  config-openai-local.yaml
data/: Advanced_Retrieval_for_Retrieval-Augmented_Generat.md  Adversarial_Attacks_on_LLMs.md  Agents.md  Building_Systems_with_the_ChatGPT_API___by_Farheen.md  Home___facebookresearch_faiss_Wiki___GitHub.md  How_we_built_our_multi.md  LLM_Powered_Autonomous_Agents.md  Maximum_inner.md  Nearest_neighbor_search.md  Prompt_Engineering.md  Reasoning_without_Observation.md  _Hello__World___program.md
docker/: Dockerfile.agentic-research  Dockerfile.backend  Dockerfile.dataprep  Dockerfile.llamacpp  llama-server-entrypoint.sh
docs/: ARCHITECTURE_EMBEDDINGS.md  ARCHITECTURE_VECTOR_STORE.md  FUNCTIONAL_EVALUATION_PLAN.md  ISSUE_83_ETUDE_ET_PLAN.md  ITERATION_1_PLAN.md  ITERATION_2_PLAN.md  MCP_DATAPREP_README.md  MCP_SERVER.md  PLANNER.md  PR109_BODY.md  README_DOCKER.md  README_FILE_SEARCH.md  RESTATE_ERROR_SIMULATION.md  UAT_RESTATE.md  WRITER_OUTPUT_CONTRACT.md  architecture.excalidraw  (+3 more)
(+237 files in other folders)
